Fixed overflow issue of pre due to boostrap

--- a/app.css
+++ b/app.css
@@ -425,4 +425,5 @@ body.json_documenter .jsonDump{
 
 body.json_documenter .jsonDump pre{
     color:white;
+    overflow:initial !important;
 }
